# whisper2

./: LICENSE  README.md  package-lock.json  package.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  commands.rs  errors.rs  lib.rs  main.rs  settings.rs
src-tauri/src/backend/: chat.rs  llm.rs  ollama.rs  reader.rs
src-tauri/src/backend/reader/: ndjson_reader.rs  ollama_reader.rs
src-tauri/src/commands/: backend_commands.rs  chat_commands.rs  ollama_commands.rs  process_commands.rs
src/lib/: AssistantResponse.svelte  ChatDialog.svelte  ChatSidebar.svelte  ModalDialog.svelte  ModalDialog.svelte.ts  ModelSelection.svelte  NavButton.svelte  OllamaConfig.svelte  OllamaStatus.svelte  SidebarButton.svelte  Snackbar.svelte  StatusDisplay.svelte  ToggableElement.svelte.ts  Util.ts  WindowTitlebar.svelte
src/lib/core/: AppContext.svelte.ts  Chat.ts  LLMBackend.ts  NDJsonReader.ts  Settings.svelte.ts  UInt8Buffer.ts
src/lib/core/backends/: Backend.svelte.ts  Backend.ts  Ollama.svelte.ts
src/lib/markdown-components/: Anchor.svelte  Blockquote.svelte  Code.svelte  CodeBlock.svelte  Heading.svelte  List.svelte  Paragraph.svelte  Table.svelte  TableCell.svelte  TableHead.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +layout.svelte  +page.svelte
src/routes/settings/about/: +page.svelte
src/routes/settings/models/: +page.svelte
