[package]
name = "whisper2"
version = "0.93.1"
description = "Simple chat client for LLMs"
authors = ["Dominik Strutz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "whisper2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.12"
tauri-plugin-store = "2"
uuid = "1.17.0"
time = { version = "0.3.41", features = ["serde", "parsing"] }
async-trait = "0.1.88"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
url = "2.5.4"
tokio = "1.46.0"
bytes = "1.10.1"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4.27"
